5_errors_delays/deployment/virtualservice-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leaf1-vs
  labels:
    kiali_wizard: weighted_routing
spec:
  hosts:
  - "*"
  gateways:
  - leaf1-gateway
  http:
  - route:
    - destination:
        host: leaf1
        subset: v10
        port:
          number: 8080
    fault:
      delay:
        percentage:
          value: 40.0
        fixedDelay: 800ms
