5_errors_delays/deployment/virtualservice-error.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leaf1-vs
  labels:
    kiali_wizard: weighted_routing
spec:
  hosts:
  - "*"
  gateways:
  - leaf1-gateway
  http:
  - route:
    - destination:
        host: leaf1
        subset: v10
        port:
          number: 8080
    fault:
      abort:
        httpStatus: 500
        percentage:
          value: 50.0
